--- a/_layouts/announcements.html
+++ b/_layouts/announcements.html
@@ -9,7 +9,7 @@
 {% endif %}
 
 {% if page.belatedbirthdays %}
-  <h2>Happy Belated Birthday!<h2>
+  <h2>Happy Belated Birthday!</h2>
   <ul>
   {% for birthday in page.belatedbirthdays %}
     <li>{{ birthday.name }}</li>
@@ -17,7 +17,7 @@
   </ul>
 {% endif %}
 {% if page.birthdays %}
-  <h2>Happy Birthday!<h2>
+  <h2>Happy Birthday!</h2>
   <ul>
   {% for birthday in page.birthdays %}
     <li>{{ birthday.name }}</li>
