--- a/_layouts/announcements.html
+++ b/_layouts/announcements.html
@@ -26,6 +26,7 @@
 {% endif %}
 
 {% if page.events %}
+  <h2>Upcomming events:</h2>
   <ul>
   {% for event in page.events %}
     <li>{{ event.date }}: {{ event.name }}</li>
