New announcements and improve display

--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -5,7 +5,8 @@
   
   <div class="caption">
     {% if include.announcement.title %}
-      <h2>{{ include.announcement.title }}</h2>
+    
+      <h2>{{ include.announcement.title }} {% if include.announcement.new %} <span class="label label-default">New</span> {% endif %}</h2>
     {% endif %}
     
     {% if include.announcement.text %}
