Redo work some things.

--- a/_includes/slidesfooter.html
+++ b/_includes/slidesfooter.html
@@ -1,6 +1,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.2.0/js/reveal.min.js"></script>
   <script>
-    Reveal.initialize();
+    Reveal.initialize({
+
+    // The "normal" size of the presentation, aspect ratio will be preserved
+    // when the presentation is scaled to fit different resolutions. Can be
+    // specified using percentage units.
+    width: 1920,
+    height: 1080,
+});
   </script>
 </body>
 
