--- a/_includes/slidesfooter.html
+++ b/_includes/slidesfooter.html
@@ -7,6 +7,17 @@
     // specified using percentage units.
     width: 1920,
     height: 1080,
+    
+    // Transition speed
+    transitionSpeed: 'slow', // default/fast/slow
+    
+    // Flags if speaker notes should be visible to all viewers
+    showNotes: true,
+
+    // Number of milliseconds between automatically proceeding to the
+    // next slide, disabled when set to 0, this value can be overwritten
+    // by using a data-autoslide attribute on your slides
+    autoSlide: 0,
 });
   </script>
 </body>
