Move latest to improve git changelogs and pull requests.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -120,6 +120,7 @@
             <ul class="dropdown-menu">
               <li>
                 <a href="{{ site.github.url | replace_first:'http://','https://' }}/posts.html">Full List</a>
+                <a href="{{ site.github.url | replace_first:'http://','https://' }}/latest.html">Latest</a>
               </li>
               <li role="separator" class="divider"></li>
               {% for post in site.posts %}
