--- a/_includes/postheader.html
+++ b/_includes/postheader.html
@@ -1,9 +1,17 @@
-<h1>{{ page.title }}</h1>
-<i>
-	<i class="fa fa-calendar"></i>
-	{{ page.date | date: "%A, %B %d, %Y" }}
-</i>
-</br>
+{% if page.title %}
+  <h1>{{ page.title }}</h1>
+{% else %}
+  <h1>Latest Announcements</h1>
+{% endif %}
+
+{% if page.date %}
+  <i>
+    <i class="fa fa-calendar"></i>
+    {{ page.date | date: "%A, %B %d, %Y" }}
+  </i>
+  </br>
+{% endif %}
+
 {% if page.authors %}
     <ul class="list-unstyled">
     {% for author in page.authors %}
