Move <head> and </body> to separate files.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,4 @@
+{% include htmlheader.html %}
 {% include header.html %}
 {% include postpages.html %}
     
@@ -5,3 +6,4 @@
     
 {% include postpages.html %}
 {% include footer.html %}
+{% include htmlfooter.html %}
