--- a/_includes/announcements.html
+++ b/_includes/announcements.html
@@ -1,3 +1,4 @@
+{% include htmlheader.html %}
 {% include header.html %}
 {% include postheader.html info=include.from %}
 {% if include.showpages | default: true %}
@@ -61,3 +62,4 @@
 
 {% include postpages.html %}
 {% include footer.html %}
+{% include htmlfooter.html %}
