--- a/_includes/htmlheader.html
+++ b/_includes/htmlheader.html
@@ -59,6 +59,16 @@
       height:60px; /* fixed header height*/
       margin:-60px 0 0; /* negative fixed header height */
     }
+    /*
+     * Row with equal height columns
+     * --------------------------------------------------
+     */
+    .row-eq-height {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display:         flex;
+    }
   </style>
   
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
