--- a/_includes/htmlheader.html
+++ b/_includes/htmlheader.html
@@ -69,6 +69,18 @@
       display: -ms-flexbox;
       display:         flex;
     }
+    {% if site.data.scroll %}
+    .marquee {
+      width: 100%;
+      overflow: hidden;
+      white-space: nowrap;
+      box-sizing: border-box;
+      animation-name: marquee;
+      animation-duration: {{ site.data.scroll.time | default: "10s" }};
+      animation-timing-function: linear;
+      animation-iteration-count: infinite;
+    }
+    {% endif %}
   </style>
   
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
