Forgot the animation

--- a/_includes/htmlheader.html
+++ b/_includes/htmlheader.html
@@ -80,6 +80,10 @@
       animation-timing-function: linear;
       animation-iteration-count: infinite;
     }
+    @keyframes marquee {
+      0% { left: 100% }
+      100% { left: -100%}
+    }
     {% endif %}
   </style>
   
