--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -5,7 +5,7 @@
     
       <h2 class="panel-title">
         {% if include.announcement.new %} 
-          <span class="label label-default">New</span> 
+          <span class="label label-info">New</span> 
         {% endif %}
         {% if include.announcement.updated %} 
           <span class="label label-info">Updated</span> 
