--- a/_includes/htmlheader.html
+++ b/_includes/htmlheader.html
@@ -50,6 +50,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha256-KC5lAzGRWwscU0sTmXtd8ka5mt7Vk8a0L5JqOhwA28s= sha512-+f2l7T69JKgnn0+Lc8P0WpM4J34GfEIInTI+iLOQWekcR9KxXE1epKQkwzFIZ7mf12jQlCryh2HfZqS8GcpR8Q==" crossorigin="anonymous">
   
   <style>
+    {% if page.overrideheader %}
     body {
       padding-top: 70px;
       padding-bottom: 20px;
@@ -60,6 +61,7 @@
       height:60px; /* fixed header height*/
       margin:-60px 0 0; /* negative fixed header height */
     }
+    {% endif %}
     /*
      * Row with equal height columns
      * --------------------------------------------------
