--- a/_includes/htmlheader.html
+++ b/_includes/htmlheader.html
@@ -84,22 +84,30 @@
       display: -ms-flexbox;
       display:         flex;
     }
-    {% if site.data.scroll %}
+    /* Make it a marquee */
     .marquee {
       width: 100%;
-      overflow: hidden;
       white-space: nowrap;
       box-sizing: border-box;
       animation-name: marquee;
-      animation-duration: {{ site.data.scroll.time | default: "10s" }};
+      animation-duration: 20s;
       animation-timing-function: linear;
       animation-iteration-count: infinite;
+      position: absolute;
     }
+    .marquee:hover {
+      animation-play-state: paused
+    }
+    
+    /* Make it move */
     @keyframes marquee {
-      0% { left: 100% }
-      100% { left: -100%}
+      0% {
+        left: 100%
+      }
+      100% {
+        left: -100%
+      }
     }
-    {% endif %}
   </style>
   
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
@@ -120,8 +128,14 @@
       var image_x = document.getElementById('blockedImage');
       image_x.parentNode.removeChild(image_x);
     }
-    </script>
     
+    $(window).load(function() {
+      $(".marquee")
+        .css("animation-duration", ($(window).width() + $(".marquee").width()) / 30 + "s")
+      console.log(($(window).width() + $(".marquee").width()) / 30);
+    });
+  </script>
+  
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script> -->
 </head>
 <body>
