--- a/_includes/htmlheader.html
+++ b/_includes/htmlheader.html
@@ -151,7 +151,7 @@
     				center: 'title',
     				right: 'month,agendaWeek,agendaDay'
     			},
-    			defaultDate: '{{ page.date | date: "%Y-%m-%d" }}',
+    			defaultDate: '{{ site.time | date: "%Y-%m-%d" }}',
     			defaultView: 'basicDay',
     			editable: false,
     			googleCalendarApiKey: '	AIzaSyCZHE5Ts4nL19uHMzNglqydt0qkp6kKsLs',
