More config and smaller screen

--- a/_includes/slidesfooter.html
+++ b/_includes/slidesfooter.html
@@ -5,8 +5,8 @@
     // The "normal" size of the presentation, aspect ratio will be preserved
     // when the presentation is scaled to fit different resolutions. Can be
     // specified using percentage units.
-    width: 1920,
-    height: 1080,
+    width: 1280,
+    height: 720,
     
     // Transition speed
     transitionSpeed: 'slow', // default/fast/slow
@@ -21,6 +21,12 @@
     
     // Loop the presentation
     loop: true,
+    
+    // Flags if the presentation is running in an embedded mode,
+    // i.e. contained within a limited portion of the screen
+    embedded: false,
+    // Flags if speaker notes should be visible to all viewers
+    showNotes: false
 });
   </script>
 </body>
