--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,3 +10,5 @@
     Page compiled at {{ site.time }} for commit <a href="{{ site.github.repository_url }}/commit/{{ site.github.build_revision }}">{{ site.github.build_revision }}</a>.
   </p>
 </footer>
+
+</div>
