--- a/_includes/htmlheader.html
+++ b/_includes/htmlheader.html
@@ -56,7 +56,7 @@
   </script>
   
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
-
+  
   <script>
     function loadSuccess() {
       var div_x = document.getElementById('blockedInfo');
@@ -99,6 +99,20 @@
     </script>
   {% endif %}
   <link rel="stylesheet" type="text/css" href="{{ site.github.url | replace_first:'http://','https://'}}" />
+  <style>
+    {% if page.overrideheader %}
+    body {
+      padding-top: {{ page.overrideheader }};
+      padding-bottom: {{ page.overrideheader }};
+    }
+    :target:before, .thumbnail:before {
+      content:"";
+      display:block;
+      height:{{ page.overrideheader }}; /* fixed header height*/
+      margin:-{{ page.overrideheader }} 0 0; /* negative fixed header height */
+    }
+    {% endif %}
+  </style>  
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script> -->
 </head>
 <body>
