--- a/_includes/htmlheader.html
+++ b/_includes/htmlheader.html
@@ -98,7 +98,7 @@
     
     </script>
   {% endif %}
-  <link rel="stylesheet" type="text/css" href="{{ site.github.url | replace_first:'http://','https://'}}" />
+  <link rel="stylesheet" type="text/css" href="{{ site.github.url | replace_first:'http://','https://' }}/main.css" />
   <style>
     {% if page.overrideheader %}
     body {
