Fix site title.

--- a/_includes/htmlheader.html
+++ b/_includes/htmlheader.html
@@ -41,7 +41,7 @@
     <meta name="twitter:image" content="{{ site.github.owner_gravatar_url }}">
   {% endif %}
   
-  <title>{{ page.title | default: "dbyannounce" }}</title>
+  <title>{{ page.title | default: site.github.project_title }}</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
