--- a/_includes/htmlfooter.html
+++ b/_includes/htmlfooter.html
@@ -11,7 +11,7 @@
 
     function reload(){
       $.get("{{ site.github.url | replace_first:'http://','https://' }}/api/commit", function(data){
-        if("{{ site.github.build_revision }}"!==data) {
+        if("{{ site.github.build_revision }}"!=data) {
           location.reload(true);
           console.log("Reloading: Was {{ site.github.build_revision }} - Now " + data);
         }
