--- a/_includes/htmlfooter.html
+++ b/_includes/htmlfooter.html
@@ -10,9 +10,9 @@
     setInterval(reload, 10000);
 
     function reload(){
-      $.get("{{ site.github.url | replace_first:'http://','https://' }}/api/commit", function(data){
+      $.get("{{ site.github.url | replace_first:'http://','https://' }}/api/commit?commit={{ site.github.build_revision }}", function(data){
         if("{{ site.github.build_revision }}"!=data) {
-          location.reload(true);
+          window.location = "{{ site.github.url | replace_first:'http://','https://' }}/screen.html?commit={{ site.github.build_revision }}"
           console.log("Reloading: Was {{ site.github.build_revision }} - Now " + data);
         }
         else {
