--- a/_includes/htmlfooter.html
+++ b/_includes/htmlfooter.html
@@ -11,12 +11,13 @@
 
     function reload(){
       $.get("{{ site.github.url | replace_first:'http://','https://' }}/api/commit?commit={{ site.github.build_revision }}", function(data){
-        if("{{ site.github.build_revision }}".localeCompare(data) !== 0) {
+        curr = "{{ site.github.build_revision }}"
+        if(curr !== data) {
           window.location = "{{ site.github.url | replace_first:'http://','https://' }}/screen.html?commit={{ site.github.build_revision }}"
-          console.log("Reloading: Was {{ site.github.build_revision }} - Now " + data);
+          console.log("Reloading: Was " + curr + " - Now " + data);
         }
         else {
-          console.log("Not Reloading: Current {{ site.github.build_revision }} - Recieved " + data);
+          console.log("Not Reloading: Current " + curr + " - Recieved " + data);
         }
       });
     }
