--- a/_includes/htmlfooter.html
+++ b/_includes/htmlfooter.html
@@ -12,7 +12,7 @@
     function reload(){
       $.get("{{ site.github.url | replace_first:'http://','https://' }}/api/commit?commit={{ site.github.build_revision }}", function(data){
         var curr = "{{ site.github.build_revision }}"
-        if(curr !== data) {
+        if(curr !== data.trim()) {
           window.location = "{{ site.github.url | replace_first:'http://','https://' }}/screen.html?commit={{ site.github.build_revision }}"
           console.log("Reloading: Was " + curr + " - Now " + data);
         }
